--- a/redesign/modules/couponcarrier/couponcarrier.css
+++ b/redesign/modules/couponcarrier/couponcarrier.css
@@ -1,7 +1,7 @@
 .mod-couponcarrier {
     border-bottom: 1px solid #DFD9B7;
     border-radius: 0 0 3px 3px;
-    padding: 14px 0;
+    padding: 0 0 10px;
 }
 .mod-couponcarrier .available,
 .mod-couponcarrier .cart,
