--- a/redesign/modules/gallery/gallery.css
+++ b/redesign/modules/gallery/gallery.css
@@ -1,4 +1,112 @@
 .mod-gallery .mrec {
     height: 250px;
     width: 300px;
+    margin: 12px 6px 6px 12px;
+}
+
+
+
+
+
+
+
+.mod-gallery .tools {
+    background: #3597D3;
+    padding: 6px 12px;
+
+    position: fixed;
+    bottom: 0;
+    right: 0;
+
+    /*tools protrude to the right, overlapping with fix-positioned ads. need z-index to bring tools on the top.*/
+    z-index: 1;
+
+    -webkit-border-top-left-radius: 5px;
+   -webkit-border-top-right-radius: 5px;
+        -moz-border-radius-topleft: 5px;
+       -moz-border-radius-topright: 5px;
+            border-top-left-radius: 5px;
+           border-top-right-radius: 5px;
+}
+.mod-gallery .tools.inactive {
+    background-color: rgba(53, 151, 211, 0.75);
+}
+.mod-gallery .selectall {
+    border-right: 1px solid #FFF;
+    display: inline;
+    padding-right: 12px;
+}
+.mod-gallery .selectall label {
+    color: #FFF;
+    font-weight: normal;
+    margin-left: 4px;
+}
+.mod-gallery .tools .goto-top {
+    color: #FFF;
+    padding-left: 12px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 92.3%;
+}
+.mod-gallery .goto-top .triangle-top {
+    margin-right: 8px;
+    border-color: transparent transparent white transparent;
+    bottom: 9px;
+    border-width: 9px 6px;
+}
+.mod-gallery .loading-indicator,
+.mod-gallery .page-break {
+    clear: both;
+    text-align: center;
+}
+.mod-gallery .loading-indicator p,
+.mod-gallery .page-break {
+    font-size: 92.3%;
+    font-weight: bold;
+    color: #0D92df;
+}
+.mod-gallery .loading-indicator p {
+    padding-top: 2em;
+    padding-bottom: 1em;
+}
+.mod-gallery .page-break {
+    padding-top: 2em;
+    padding-bottom: 0.5em;
+}
+/**
+ * "Show more" button
+ */
+.mod-gallery .more {
+    text-align: center;
+}
+.mod-gallery .more button {
+    /*background: -moz-linear-gradient(center top , #8AD1F1 0%, #1EA9E4 100%) repeat scroll 0 0 transparent;*/
+    border: 1px solid #0096D5;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: bold;
+    height: 100%;
+    margin: 12px;
+    padding: 9px;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.65);
+    width: 98%;
+
+    -webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;
+
+    background: rgb(240,238,238);
+    background: -moz-linear-gradient(top, rgba(120,177,205,1) 0%, rgba(48,168,230,1) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(120,177,205,1)), color-stop(100%,rgba(48,168,230,1)));
+    background: -webkit-linear-gradient(top, rgba(120,177,205,1) 0%,rgba(48,168,230,1) 100%);
+    background: -o-linear-gradient(top, rgba(120,177,205,1) 0%,rgba(48,168,230,1) 100%);
+    background: -ms-linear-gradient(top, rgba(120,177,205,1) 0%,rgba(48,168,230,1) 100%);
+    background: linear-gradient(top, rgba(120,177,205,1) 0%,rgba(48,168,230,1) 100%);
+
+    -webkit-box-shadow: 0px 1px 0px rgba(248, 248, 248, 1) inset;
+       -moz-box-shadow: 0px 1px 0px rgba(248, 248, 248, 1) inset;
+            box-shadow: 0px 1px 0px rgba(248, 248, 248, 1) inset;
+
+}
+.mod-gallery .more button:hover {
 }
