--- a/redesign/modules/gallery/grid.css
+++ b/redesign/modules/gallery/grid.css
@@ -2,23 +2,23 @@
 /* = The 1Kb Grid = */     /* 9 columns, 60 pixels each, with 10 pixel gutter */
 /* ================ */
 
-.grid_1 { width:305px; }
-.grid_2 { width:620px; }
+.grid_1 { width:320px; }
+.grid_2 { width:640px; }
 .grid_3 { width:935px }
 
 .column {
-    margin: 0 5px;
+    /*margin: 0 5px;*/
     overflow: hidden;
     float: left;
     display: inline;
 }
 .row {
-    width: 1010px;
+    width: 970px;
     margin: 0 auto;
     overflow: hidden;
 }
 .row .row {
-    margin: 0 -5px;
+    /*margin: 0 -5px;*/
     width: auto;
     display: inline-block;
 }
