--- a/redesign/common.css
+++ b/redesign/common.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: "MuseoSans";
+    font-style: normal;
+    font-weight: bold;
+    src: url("//cdn.cpnscdn.com/static.coupons.com/Sites/fonts/MuseoSans_700-webfont.eot?#iefix") format("embedded-opentype"), url("//cdn.cpnscdn.com/static.coupons.com/Sites/fonts/MuseoSans_700-webfont.svg#webfontkQkWxTED") format("svg"), url("//cdn.cpnscdn.com/static.coupons.com/Sites/fonts/MuseoSans_700-webfont.woff") format("woff"), url("//cdn.cpnscdn.com/static.coupons.com/Sites/fonts/MuseoSans_700-webfont.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'RockSaltRegular';
+  text-transform: lowercase;
+  src: url("fonts/RockSalt-webfont.eot");
+  src: url("fonts/RockSalt-webfont.eot?#iefix") format("embedded-opentype"),
+      url("fonts/RockSalt-webfont.woff") format("woff"),
+      url("fonts/RockSalt-webfont.ttf") format("truetype"),
+      url("fonts/RockSalt-webfont.svg#RockSaltRegular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 .sprite-icons {
     background-image: url("//cdn.cpnscdn.com/static.coupons.com/Sites/img/bigblue/sprite_icons_3.png");
 }
@@ -24,15 +41,21 @@ button::-moz-focus-inner {
     text-align: center;
 }
 .triangle { /* default, pointing to right */
-    border-color: transparent transparent transparent #FFFFFF;
+    border-color: transparent transparent transparent #0F94D2;
     border-style: solid;
-    border-width: 5px;
+    border-width: 6px 4px;
     font-size: 0;
     height: 0;
     width: 0;
     position: relative;
     bottom: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
+}
+.triangle-down {
+    border-color: #0F94D2 transparent transparent transparent;
+}
+.triangle-up {
+    border-color: transparent transparent #0F94D2 transparent;
 }
 .hidden {
     display: none;
