--- a/redesign/modules/couponcarrier/couponcarrier.css
+++ b/redesign/modules/couponcarrier/couponcarrier.css
@@ -1,54 +1,63 @@
 .mod-couponcarrier {
     border-bottom: 1px solid #DFD9B7;
-    border-radius: 0 0 3px 3px;
-    padding: 0 0 10px;
+    padding: 20px 0;
+    position: relative;
 }
+.mod-couponcarrier .welcome,
 .mod-couponcarrier .available,
 .mod-couponcarrier .cart,
 .mod-couponcarrier .print-button {
     display: inline-block;
-    margin-left: 22px
 }
 .mod-couponcarrier .available span {
-    color: #535353;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #363636;
+    font-size: 16px;
 }
 .mod-couponcarrier .available em {
-    font-size: 138.5%;
-    color: #555;
-    text-shadow: 0 -1px 0 rgba(102, 102, 102, 0.5);
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    color: #363636;
+    font-size: 16px;
 }
 
 .mod-couponcarrier .print-button {
     cursor: pointer;
-    min-width: 145px;
-    padding: 7px 12px;
-}
-.mod-couponcarrier .print-button {
-    background: -moz-linear-gradient(center top , #F03D25 0%, #D52524 100%) repeat scroll 0 0 transparent;
-    border: medium none;
-    border-radius: 3px 3px 3px 3px;
-    box-shadow: 0 1px 2px #666666;
-    color: #FFFFFF;
-    cursor: pointer;
+    padding: 5px 0 3px 18px;
+    position: absolute;
+    right: 0;
+    top: 15px;
+
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: bold;
-    height: 31px;
-    min-width: 145px;
-    text-shadow: 0 1px 1px #888888;
-}
-.mod-couponcarrier .print-button.disabled {
-    background: -moz-linear-gradient(center top , #FFFFFF 0%, #D9D9D9 100%) repeat scroll 0 0 transparent;
-    color: #999999;
-    cursor: default;
-    text-shadow: none;
+    color: #fff;
+    text-shadow: 0 -1px #a54133;
+    font-size: 13px;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px #A0927D, inset 0 1px white;
+    border: 1px solid #D33820;
+    background: #ef6e5b;
+    background: -moz-linear-gradient(top, #ef6e5b 0%, #e93b20 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ef6e5b), color-stop(100%,#e93b20));
+    background: -webkit-linear-gradient(top, #ef6e5b 0%,#e93b20 100%);
 }
 .mod-couponcarrier .print-button .title {
-    border-right: 1px solid #B90700;
+    background: url("http://localhost/~myan/tests/redesign/images/icon-print.png") no-repeat scroll 0 1px transparent;
+    padding-left: 24px;
     padding-right: 18px;
 }
+.mod-couponcarrier .print-button .separator {
+    display: inline-block;
+    width: 1px;
+    height: 20px;
+    background: #d12c13;
+    box-shadow: 1px 0 #f1806e;
+    vertical-align: middle;
+}
 .mod-couponcarrier .print-button .number {
-    border-left: 1px solid #E87B7B;
-    padding-left: 18px;
-    padding-right: 6px;
+    display: inline-block;
+    text-align: center;
+    width: 43px;
 }
 .couponcarrier-transfer-clipped {
     z-index: 1;
@@ -72,12 +81,13 @@
     max-width: 298px;
     min-width: 15px;
     padding: 3px 6px 4px 7px;
-    width: 0;
+    text-align: right;
+    width: 23%; /* should be 0. 23% is prototype-purpose */
 }
-.mod-couponcarrier .selectall {
-    cursor: pointer;
-    display: inline;
-}
-.mod-couponcarrier .selectall label {
-    color: #4D4D4D;
+
+.mod-couponcarrier .welcome p {
+    font-family: RockSaltRegular;
+    font-size: 15px;
+    text-transform: lowercase;
+    color: #090909;
 }
