--- a/redesign/modules/header/header.css
+++ b/redesign/modules/header/header.css
@@ -1,38 +1,105 @@
 .mod-header {
-    background: -moz-linear-gradient(center top , #4FAEE9 0%, #70C1F4 100%) repeat scroll 0 0 transparent;
-    height: 70px;
+    background: #54bce9;
+    background: -moz-linear-gradient(top, #54bce9 0%, #10a2e0 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#54bce9), color-stop(100%,#10a2e0));
+    background: -webkit-linear-gradient(top, #54bce9 0%,#10a2e0 100%);
+    box-shadow: 0 1px 2px #a7a5a3;
+
+    height: 72px;
     overflow: visible;
-}
-.mod-header .company-logo {
-    height: 55px;
-    left: 50px;
-    top: 8px;
-    width: 105px;
 }
 .mod-header .navbar {
     position: absolute;
-    right: 10px;
-    top: 20px;
+    right: 20px;
+    top: 25px;
 }
 
 .mod-header .tab-container,
 .mod-header .tablist,
+.mod-header .user-dropdown,
 .mod-header .fblike {
     display: inline-block;
 }
 .mod-header .navbar .tab {
-    margin-right: 20px;
+    margin-left: 25px;
+}
+.mod-header .navbar .tab.last {
+    margin-right: 25px;
 }
 .mod-header .navbar .tab a {
-    color: #FFFFFF;
-    font-family: 'MuseoSans',sans-serif;
-    font-size: 11px;
-    font-weight: bold;
-    letter-spacing: 0.8px;
     text-decoration: none;
-    text-shadow: 0 1px 0 #0076C5;
+
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    color: #fff;
+    text-shadow: 0 1px #1d789f;
+    font-size: 11px;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 .mod-header .navbar .tab.selected a {
     border-bottom: 2px solid #FFF;
+}
+.mod-header .user-dropdown {
+    vertical-align: top;
+    position: relative;
+    top: -9px;
+    margin-left: 12px;
+    margin-right: 5px;
+
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    color: #fff;
+    font-size: 11px;
+    border-radius: 3px;
+    border: solid 1px #009bde;
+    box-shadow: 0 1px 5px rgba(0,0,0,.5);
+    background: #59bbe5;
+    background: -moz-linear-gradient(top, #59bbe5 0%, #139eda 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#59bbe5), color-stop(100%,#139eda));
+    background: -webkit-linear-gradient(top, #59bbe5 0%,#139eda 100%);
+    width: auto;
+}
+.mod-header .user-dropdown li {
+    border-bottom: 1px solid #058AC3;
+    border-top: 1px solid #80CBEB;
+    padding: 9px 12px;
+}
+.mod-header .user-dropdown li:hover {
+    background: #058ac4;
+}
+.mod-header .user-dropdown li.first:hover {
+    background: transparent;
+}
+.mod-header .user-dropdown li,
+.mod-header .user-dropdown li a{
+    color: #fff;
+    text-decoration: none;
+}
+.mod-header .user-dropdown li.first {
+    text-transform: uppercase;
+    text-shadow: 0 1px #1D789F;
+}
+.mod-header .user-dropdown.closed {
+    background: none;
+    border: none;
+    box-shadow: none;
+    position: static;
+    vertical-align: inherit;
+    margin-left: 25px;
+    margin-right: 18px;
+}
+.mod-header .user-dropdown.closed li {
+    display: none;
+
+}
+.mod-header .user-dropdown.closed li.first {
+    display: block;
+    border: none;
+    padding: 0;
+}
+.mod-header .user-dropdown .triangle-down {
+    border-color: #FFFFFD transparent transparent transparent;
+    bottom: 0;
+    margin-left: 7px;
 }
