--- a/redesign/common.css
+++ b/redesign/common.css
@@ -22,6 +22,15 @@
 button::-moz-focus-inner {
     border: 0 none;
 }
+button {
+    background: -moz-linear-gradient(center top , #FFFFFF 0%, #FFFFFF 0%, #7ACBEE 2%, #069DDF 100%) repeat scroll 0 0 #099FDF;
+    border: 1px solid #099FDF;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 .txt-offscreen {
     text-indent: -999em;
 }
