--- a/redesign/modules/featuredtoday/featuredtoday.css
+++ b/redesign/modules/featuredtoday/featuredtoday.css
@@ -1,9 +1,36 @@
+.mod-featuredtoday {
+    border: 1px solid #CDCDCD;
+    position: relative;
+    margin: 12px 6px 6px 12px;
+    width: 300px;
+
+    -webkit-border-radius: 6px;
+       -moz-border-radius: 6px;
+            border-radius: 6px;
+
+    -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+       -moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+}
 /* size-3: ModuleSize_Long */
 .mod-featuredtoday.size-3 .image {
     width: 250px;
     height: 120px;
 }
 /* size-4: ModuleSize_Grid */
+.mod-featuredtoday.size-4 {
+    height: 160px;
+    width: 300px;
+}
+.mod-featuredtoday.size-4 .img img {
+    border-radius: 6px 6px 0 0;
+    width: 300px;
+    height: 100px;
+}
+.mod-featuredtoday.size-4 .bd {
+    padding: 10px 15px 15px;
+    position: relative;
+}
 .mod-featuredtoday.size-4 .image {
     width: 250px;
     height: 120px;
