--- a/redesign/modules/gallery/gallery.css
+++ b/redesign/modules/gallery/gallery.css
@@ -1,4 +1,5 @@
-.mod-gallery .mrec {
+.mod-gallery .mrec,
+.mod-gallery .house-ad {
     height: 250px;
     width: 300px;
     margin: 12px 6px 6px 12px;
@@ -80,31 +81,15 @@
     text-align: center;
 }
 .mod-gallery .more button {
-    /*background: -moz-linear-gradient(center top , #8AD1F1 0%, #1EA9E4 100%) repeat scroll 0 0 transparent;*/
-    border: 1px solid #0096D5;
     color: #FFFFFF;
     cursor: pointer;
     font-weight: bold;
     margin: 12px;
     padding: 9px;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.65);
     width: 98%;
 
-    -webkit-border-radius: 5px;
-       -moz-border-radius: 5px;
-            border-radius: 5px;
 
-    background: rgb(240,238,238);
-    background: -moz-linear-gradient(top, rgba(120,177,205,1) 0%, rgba(48,168,230,1) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(120,177,205,1)), color-stop(100%,rgba(48,168,230,1)));
-    background: -webkit-linear-gradient(top, rgba(120,177,205,1) 0%,rgba(48,168,230,1) 100%);
-    background: -o-linear-gradient(top, rgba(120,177,205,1) 0%,rgba(48,168,230,1) 100%);
-    background: -ms-linear-gradient(top, rgba(120,177,205,1) 0%,rgba(48,168,230,1) 100%);
-    background: linear-gradient(top, rgba(120,177,205,1) 0%,rgba(48,168,230,1) 100%);
 
-    -webkit-box-shadow: 0px 1px 0px rgba(248, 248, 248, 1) inset;
-       -moz-box-shadow: 0px 1px 0px rgba(248, 248, 248, 1) inset;
-            box-shadow: 0px 1px 0px rgba(248, 248, 248, 1) inset;
 
 }
 .mod-gallery .more button:hover {
