--- a/redesign/modules/gallery/pod.css
+++ b/redesign/modules/gallery/pod.css
@@ -2,6 +2,7 @@
     border: 1px solid #CDCDCD;
     position: relative;
     margin: 12px 6px 6px 12px;
+    width: 300px;
 
     -webkit-border-radius: 6px;
        -moz-border-radius: 6px;
@@ -14,8 +15,9 @@
 .pod {
     background: none repeat scroll 0 0 #FFFFFF;
     cursor: pointer;
-    min-height: 150px;
-    padding: 8px 10px 12px 8px;
+    height: 120px;
+    padding: 20px;
+    overflow: hidden;
 
     -webkit-border-radius: 6px;
        -moz-border-radius: 6px;
@@ -27,8 +29,10 @@
 }
 
 .pod .hover {
-    background: /*url("../images/bg/bg-pod-hover.png")*/ no-repeat scroll center center rgba(255, 255, 255, 0.8);
+    background: url("/~myan/tests/redesign/images/bg-pod-hover.png") no-repeat scroll center center rgba(255, 255, 255, 0.8);
+    font-family: 'RockSaltRegular';
     height: 95%;
+    left: 11px;
     opacity: 0;
     position: absolute;
     text-transform: lowercase;
@@ -40,20 +44,38 @@
 }
 
 /* inside pod */
+.pod .img {
+    margin-right: 15px;
+}
 .pod .summary {
-    color: #8FC73D;
-    font-size: 123.1%;
-    font-weight: 700;
-    margin: 8px 0 6px 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    color: #6d6d6d;
+    font-size: 16px;
     text-transform: uppercase;
 }
 .pod .brand {
-    color: #555555;
-    font-size: 123.1%;
-    font-weight: 500;
-    margin: 0 0 4px 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    color: #333333;
+    font-size: 16px;
 }
 .pod .details {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    color: #777777;
+    font-size: 13px;
+}
+
+.pod .hover p {
+    -moz-transform: rotate(-7deg);
+    color: #222222;
+    font-size: 20px;
+    margin-top: 18%;
+    text-align: center;
+}
+.pod p {
     color: #999999;
+    font-size: 13px;
     line-height: 1.3;
 }
