--- a/redesign/modules/savingsclub/savingsclub.css
+++ b/redesign/modules/savingsclub/savingsclub.css
@@ -1,8 +1,8 @@
-.mod-savingsclub .shadow {
-    min-height: 250px;
+.mod-savingsclub {
     border: 1px solid #CDCDCD;
     position: relative;
     margin: 12px 6px 6px 12px;
+    width: 300px;
 
     -webkit-border-radius: 6px;
        -moz-border-radius: 6px;
@@ -12,41 +12,8 @@
        -moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
             box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
 }
-.mod-savingsclub .inner {
-    background: none repeat scroll 0 0 #FFFFFF;
-    cursor: pointer;
-    min-height: 150px;
-
-    -webkit-border-radius: 6px;
-       -moz-border-radius: 6px;
-            border-radius: 6px;
-}
-.mod-savingsclub .image {
-    border-radius: 6px 6px 0 0;
-    height: 148px;
-}
-.mod-savingsclub .bd {
-    padding: 0 10px 12px 8px;
-}
-
 /* inside */
-.mod-savingsclub .summary {
-    color: #8FC73D;
-    font-size: 123.1%;
-    font-weight: 700;
-    margin: 8px 0 6px 0;
-    text-transform: uppercase;
-}
-.mod-savingsclub .brand {
-    color: #555555;
-    font-size: 123.1%;
-    font-weight: 500;
-    margin: 0 0 4px 0;
-}
-.mod-savingsclub .details {
-    color: #999999;
-    line-height: 1.3;
-}
+
 
 /* size-3: ModuleSize_Long */
 .mod-savingsclub.size-3 .shadow {
@@ -62,4 +29,18 @@
     border-radius: 6px 0 0 6px;
     height: 112px;
     margin-top: -8px;
+}
+/* size-4: ModuleSize_Grid */
+.mod-savingsclub.size-4 {
+    height: 160px;
+    width: 300px;
+}
+.mod-savingsclub.size-4 .img img {
+    border-radius: 6px 6px 0 0;
+    width: 300px;
+    height: 100px;
+}
+.mod-savingsclub.size-4 .bd {
+    padding: 10px 15px 15px;
+    position: relative;
 }
