--- a/redesign/modules/supersaver/supersaver.css
+++ b/redesign/modules/supersaver/supersaver.css
@@ -1,10 +1,42 @@
+.mod-supersaver {
+    border: 1px solid #CDCDCD;
+    position: relative;
+    margin: 12px 6px 6px 12px;
+    width: 300px;
+
+    -webkit-border-radius: 6px;
+       -moz-border-radius: 6px;
+            border-radius: 6px;
+
+    -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+       -moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+}
 /* size-3: ModuleSize_Long */
 .mod-supersaver.size-3 .image {
     width: 250px;
     height: 120px;
 }
 /* size-4: ModuleSize_Grid */
-.mod-supersaver.size-4 .image {
-    width: 250px;
-    height: 120px;
+.mod-supersaver.size-4 {
+    height: 160px;
+    width: 300px;
+}
+.mod-supersaver.size-4 .img img {
+    border-radius: 6px 6px 0 0;
+    width: 300px;
+    height: 100px;
+}
+.mod-supersaver.size-4 .bd {
+    padding: 10px 15px 15px;
+    position: relative;
+}
+.mod-supersaver.size-4 button {
+    font-weight: bold;
+    color: #fff;
+    font-size: 12px;
+    padding: 3px 4px;
+    position:absolute;
+    top: 15px;
+    right: 15px;
 }
