--- a/redesign/common.css
+++ b/redesign/common.css
@@ -23,7 +23,14 @@ button::-moz-focus-inner {
     border: 0 none;
 }
 button {
-    background: -moz-linear-gradient(center top , #FFFFFF 0%, #FFFFFF 0%, #7ACBEE 2%, #069DDF 100%) repeat scroll 0 0 #099FDF;
+    background: #069ddf;
+    background: -moz-linear-gradient(top, #ffffff 0%, #7acbee 2%, #069ddf 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(2%,#7acbee), color-stop(100%,#069ddf));
+    background: -webkit-linear-gradient(top, #ffffff 0%,#7acbee 2%,#069ddf 100%);
+    background: -o-linear-gradient(top, #ffffff 0%,#7acbee 2%,#069ddf 100%);
+    background: -ms-linear-gradient(top, #ffffff 0%,#7acbee 2%,#069ddf 100%);
+    background: linear-gradient(to bottom, #ffffff 0%,#7acbee 2%,#069ddf 100%);
+
     border: 1px solid #099FDF;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     border-radius: 4px;
