--- a/redesign/modules/savingsclub/savingsclub.css
+++ b/redesign/modules/savingsclub/savingsclub.css
@@ -62,22 +62,19 @@
     height: 115px;
     width: 300px;
 }
-/* size-4: ModuleSize_Grid */
-.mod-offeroftheweek.size-4 {
-    height: 160px;
-    width: 300px;
-}
+
 /* size-4: ModuleSize_Grid */
 .mod-savingsclub.size-4 {
     height: 160px;
     width: 300px;
 }
-.mod-savingsclub.size-4 .img img {
+.mod-savingsclub.size-4 .top img {
     border-radius: 6px 6px 0 0;
     width: 300px;
     height: 100px;
 }
-.mod-savingsclub.size-4 .bd {
+.mod-savingsclub.size-4 .bottom {
     padding: 10px 15px 15px;
     position: relative;
 }
+
