--- a/redesign/modules/supersaver/supersaver.css
+++ b/redesign/modules/supersaver/supersaver.css
@@ -22,12 +22,12 @@
     height: 160px;
     width: 300px;
 }
-.mod-supersaver.size-4 .img img {
+.mod-supersaver.size-4 .top img {
     border-radius: 6px 6px 0 0;
     width: 300px;
     height: 100px;
 }
-.mod-supersaver.size-4 .bd {
+.mod-supersaver.size-4 .bottom {
     padding: 10px 15px 15px;
     position: relative;
 }
