--- a/redesign/layout.css
+++ b/redesign/layout.css
@@ -26,19 +26,12 @@ body {
     float: left;
     margin-right: 5px;
     width: 100%;
+    background: #faf9f5;
 }
 #footer {
     clear: both;
     margin: 0 auto;
     width: 100%;
-}
-.mod-stalker {
-    background-color: #FDF7D7;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-    margin: 0 auto;
-    padding: 0 16px;
-    width: 740px;
-    border-radius: 0 0 6px 6px;
 }
 .fixed-header .mod-stalker {
     position: fixed;
