--- a/redesign/modules/gallery/pod.css
+++ b/redesign/modules/gallery/pod.css
@@ -50,7 +50,7 @@
 .pod .summary {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: bold;
-    color: #6d6d6d;
+    color: #8fc73d;
     font-size: 16px;
     text-transform: uppercase;
 }
