--- a/prototype/modules/gallery/grid.css
+++ b/prototype/modules/gallery/grid.css
@@ -8,14 +8,14 @@
 
 .column {
     /*margin: 0 5px;*/
-    /*overflow: hidden;*/
+    overflow: hidden;
     float: left;
     display: inline;
 }
 .row {
     width: 970px;
     margin: 0 auto;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 .row .row {
     /*margin: 0 -5px;*/
