--- a/prototype_takeover/modules/takeover/takeover.css
+++ b/prototype_takeover/modules/takeover/takeover.css
@@ -19,11 +19,10 @@
     z-index: 2;
     height: 31px;
 }
-.mod-takeover .expaned-content {
+.mod-takeover .expanded-content {
     position: absolute;
     z-index: 1;
-
 }
-.mod-takeover.pencil .expaned-content {
+.mod-takeover.pencil .expanded-content {
     z-index: 2;
 }
