prototype takeover 1, no nav on printing page, update body background color

--- a/prototype_takeover_1/one-column-layout.css
+++ b/prototype_takeover_1/one-column-layout.css
@@ -1,6 +1,6 @@
 
 body {
-    background: url("//cdn.cpnscdn.com/static.coupons.com/Sites/img/bigblue/body_bg.png") repeat-y scroll 50% 0 transparent;
+    background: #FAF9F5;
     font-family: Arial,Helvetica,Verdana,sans-serif;
     margin: 0;
 }
