prototype takeover 1, plug in yoplait assets to various modules

--- a/prototype_takeover_1/modules/ads/ads.css
+++ b/prototype_takeover_1/modules/ads/ads.css
@@ -7,10 +7,10 @@
     display: block;
     margin-top: 20px;
 }
-.mod-gallery .mod-ads.container-300x250 {
+/*.mod-gallery .mod-ads.container-300x250 {
     margin: 0 3px;
     padding-top: 4px;
-}
+}*/
 .mod-gallery .mod-ads.container-620x115 {
     margin-left: 4px;
     margin-top: 10px;
