--- a/prototype_takeover_1/modules/gallery/gallery.css
+++ b/prototype_takeover_1/modules/gallery/gallery.css
@@ -5,7 +5,7 @@
 .mod-gallery .house-ad {
     height: 250px;
     width: 300px;
-    margin: 12px 6px 6px 12px;
+    /*margin: 12px 6px 6px 12px;*/
 }
 
 .mod-gallery .tools {
