--- a/prototype_madison/modules/featuredtoday/featuredtoday_dialog.css
+++ b/prototype_madison/modules/featuredtoday/featuredtoday_dialog.css
@@ -1,28 +1,92 @@
-.mod-featuredtoday-dialog .typeline {
+.mod-featuredtoday-flyout {
+    width: 676px;
+    position: relative;
+}
+
+.mod-featuredtoday-flyout .hd .title {
+    color: #8fc742;
+    font-size: 115.4%;
     font-weight: bold;
-    color: #8fc73d;
-    font-size: 16px;
     text-transform: uppercase;
-    letter-spacing: 1px;
 }
 
-.mod-featuredtoday-dialog .headline {
+.mod-featuredtoday-flyout .hd .featured-brand {
+    color: #333333;
+    font-size: 176.9%;
     font-weight: bold;
-    color: #333;
-    font-size: 18px;
+    margin-bottom: 16px;
 }
 
-.mod-featuredtoday-dialog .row {
-    width: 660px;
+.mod-featuredtoday-flyout .hd .program-text {
+    color: #333333;
+    font-size: 176.9%;
+    font-weight: bold;
 }
 
-.mod-featuredtoday-dialog .buttons button {
-    padding: 5px 10px 6px;
+.mod-featuredtoday-flyout .hd .additional-program-text {
+    color: #333333;
+    font-size: 176.9%;
+    font-weight: bold;
+}
+
+.mod-featuredtoday-flyout .hd img {
+    float: left;
+    margin-bottom: 10px;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+
+.mod-featuredtoday-flyout .pod {
+    float: left;
+    margin: 4px 15px 15px 4px;
+}
+
+.mod-featuredtoday-flyout .close-button {
+    background: none;
+    border: none;
+    outline: none;
+}
+
+.mod-featuredtoday-flyout .hd .close-button {
+    color: #333333;
     cursor: pointer;
-    margin-right: 13px;
+    font-size: 231%;
+    position: absolute;
+    right: -15px;
+    top: -12px;
+    height: 30px;
+    width: 30px;
 }
 
-.mod-featuredtoday-dialog .buttons a {
-    color: #0EA0E0;
-    text-decoration: none;
+.featured-coupons-pods {
+    background-color: #faf9f5;
+    border: 1px solid #e8e8e8;
+    height: 240px;
+    overflow: auto;
+    padding-left: 9px;
+    padding-top: 9px;
+    position: relative;
+}
+
+.mod-featuredtoday-flyout .ft {
+    margin-top: 20px;
+}
+
+.mod-featuredtoday-flyout .ft .close-button {
+    color: #0f94d2;
+}
+
+.featuredtoday-dialog {
+    position: absolute;
+    display: none;
+
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-radius: 6px 6px 6px 6px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    padding: 20px 20px 40px;
+}
+
+.mod-featuredtoday-flyout .ft button.disabled {
+    background: #cccccc;
+    border: 1px solid #cccccc;
 }
