--- a/prototype_madison/modules/footer/footer.css
+++ b/prototype_madison/modules/footer/footer.css
@@ -21,12 +21,14 @@
     margin-left: 0.5em;
 }
 .mod-footer .ft {
-    background: #faf9f5;
-    padding-top: 8px;
-    padding-left: 20px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: none repeat scroll 0 0 #FAF9F5;
     color: #888888;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 12px;
+    margin: 0 auto;
+    max-width: 980px;
+    padding-left: 20px;
+    padding-top: 8px;
 }
 .mod-footer .ft a {
     color: #888888;
