--- a/prototype_madison/modules/header/header.css
+++ b/prototype_madison/modules/header/header.css
@@ -1,13 +1,14 @@
 .mod-header {
-    background: #FAF9F5;
-    box-shadow: 0 1px 2px #a7a5a3;
-
+    background: none repeat scroll 0 0 #FAF9F5;
     height: 72px;
+    margin: auto;
+    max-width: 980px;
     overflow: visible;
+    position: relative;
 }
 .mod-header .navbar {
     position: absolute;
-    right: 20px;
+    right: 0;
     top: 25px;
 }
 
