--- a/prototype_madison/modules/stalker/stalker.css
+++ b/prototype_madison/modules/stalker/stalker.css
@@ -1,12 +1,13 @@
 .mod-stalker {
     background-color: #ebebea;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-    margin: 0 auto 25px auto;
-    padding: 0 16px;
-    width: 754px; /* get natual width and put it here, need it when in fixed position */
-    border-radius: 0 0 6px 6px;
+    /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);*/
+    width: 100%;
+    /*border-radius: 0 0 6px 6px;*/
 }
-
+.mod-stalker .content {
+    margin: auto;
+    max-width: 980px;
+}
 .fixed-header .mod-stalker {
     position: fixed;
     z-index: 2; /* above gallery */
