--- a/prototype_madison/one-column-layout.css
+++ b/prototype_madison/one-column-layout.css
@@ -5,8 +5,7 @@ body {
     margin: 0;
 }
 #header {
-    background-color: #FFFFFF;
-    margin: 0 auto;
+    margin: 0 auto 30px auto;
     position: relative;
     width: 100%;
     z-index: 2;
@@ -37,11 +36,6 @@ body {
     clear: both;
     margin: 0 auto;
     width: 100%;
-}
-.fixed-header .mod-stalker {
-    position: fixed;
-    z-index: 1;
-    top: 0;
 }
 .toolbarBodyShift.fixed-header .mod-stalker {
     top: 34px; /* toolbar height */
